--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,14 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
+        "matanyadaev/laravel-eloquent-spatial": "^4.1",
         "spatie/laravel-permission": "^6.3",
-        "wireui/wireui": "v2.0.0-beta.0"
+        "wireui/wireui": "^1.18"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.10",
         "fakerphp/faker": "^1.9.1",
+        "laravel-lang/lang": "^14.3",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
