--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^11.0",
         "laravel/jetstream": "^5.0",
-        "laravel/pulse": "^1.2",
+        "laravel/pulse": "^1.4",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.4",
+        "livewire/livewire": "^3.6",
         "maatwebsite/excel": "^3.1",
         "matanyadaev/laravel-eloquent-spatial": "^4.2",
         "spatie/laravel-permission": "^6.3",
@@ -72,6 +72,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "beta",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
